# SFML-AI

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  README.md
examples/ecs/: CMakeLists.txt  main.cpp
examples/miner/: Locations.hpp  Miner.cpp  Miner.hpp  MinerStates.cpp  MinerStates.hpp  main.cpp
examples/steering/: CMakeLists.txt  main.cpp  misc.cpp  misc.hpp
include/mercer/: BaseEntity.hpp  State.hpp
include/mercer/AI/: State.hpp
include/mercer/AI/Steering/: Arrive.hpp  Flee.hpp  Seek.hpp
include/mercer/ECS/: ComponentBase.hpp  ComponentBitmask.hpp  ECS.hpp  Entity.hpp  EntityID.hpp  SystemBase.hpp
include/mercer/Graph/: StateGraph.hpp
include/mercer/Misc/: Bitset.hpp  CollectionUtils.hpp  FileUtils.hpp  NonCopyable.hpp  NumberUtils.hpp  StringUtils.hpp  TypeInfoRef.hpp  VectorUtils.hpp
include/mercer/Resources/: ResourceHolder.hpp
include/mercer/Service/: BaseService.hpp  MessageQueue.hpp  ServiceProvider.hpp
src/: Arrive.cpp  ECS.cpp  Entity.cpp  FileUtils.cpp  Flee.cpp  Seek.cpp  StringUtils.cpp  SystemBase.cpp  VectorUtils.cpp
test/: Bitset_Tests.cpp  CMakeLists.txt  NumberUtils_Tests.cpp  VectorUtils_Tests.cpp
